# yat

./: .gitignore  Dockerfile  Jenkinsfile  README.md  docker-bake.hcl  pyproject.toml
.github/workflows/: pipeline.yml
cli/: pyproject.toml
cli/tests/: test_generate.py  test_list.py  test_run.py  test_yat.py
cli/yat/: __main__.py
github/: yat.jinja2
github/pre-commit/: action.yml
github/software-composition-analysis/: action.yml
jenkins/resources/pre-commit/: Dockerfile
jenkins/resources/software-composition-analysis/: run.sh  yat.yml
jenkins/vars/: preCommit.groovy  softwareCompositionAnalysis.groovy
stages/pre-commit/: Dockerfile  run.sh  yat.yml
stages/software-composition-analysis/: Dockerfile  run.sh  yat.yml
tests/: test_yat.py
yat/: __main__.py
