[tool.poetry]
name = "yat"
version = "1.1.0"
description = "🔥 YaT - Yet another Template"
authors = ["Christian Decker <christian.decker@lookslikematrix.de>"]
license = "MIT"
readme = "../README.md"

[tool.poetry.scripts]
yat = "yat.__main__:yat"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.2.1"
pyyaml = "^6.0.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.4.0"
assertpy = "^1.1"
pytest-mock = "^3.14.1"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "integration_tests: mark a test as a integration test.",
]
